<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">


    <TextView
        android:id="@+id/tvnewproducts"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/noconnection"
        android:layout_marginLeft="6dp"
        android:textStyle="bold"
        android:gravity="center_horizontal"
        android:layout_marginTop="18dp"
        android:textSize="18dp"
        android:textColor="@color/Tex"
        />

    <ImageView

        android:layout_width="wrap_content"
        android:layout_height="60dp"
        android:id="@+id/imageView7"
        android:src="@drawable/ic_neticon"
        android:layout_below="@+id/tvnewproducts"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="5dp" />


    <TextView
        android:id="@+id/tvncmsg"
        android:layout_below="@+id/imageView7"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ncmsg"
        android:layout_marginLeft="6dp"
        android:gravity="center_horizontal"
        android:layout_marginTop="5dp"
        android:textSize="16dp"
        android:textColor="@color/Tex"
        />

    <Button
        style="@style/Base.Widget.AppCompat.Button.Borderless"
        android:layout_width="match_parent"
        android:layout_below="@+id/tvncmsg"
        android:layout_height="wrap_content"
        android:text="@string/nctry"
        android:textSize="17dp"
        android:layout_marginTop="5dp"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="@color/Tex"
        android:id="@+id/btnRetryinternet"
        android:gravity="center_horizontal"/>
</RelativeLayout>