<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:weightSum="10">

    <LinearLayout

        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5.5">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY" />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_vertical"
        android:layout_weight="4.5">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="95dp"
            android:gravity="center_horizontal|center_vertical"
            android:orientation="vertical">


            <com.shudh4sure.shopping.utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:text="@string/slide_6_text"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:textStyle="bold" />

            <com.shudh4sure.shopping.utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/slide_6_text_second"
                android:textColor="@android:color/white"
                android:textSize="15dp"
                android:textStyle="bold" />


            <com.shudh4sure.shopping.utils.MyTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/spacing_large"
                android:paddingLeft="@dimen/desc_padding"
                android:paddingRight="@dimen/desc_padding"
                android:text="@string/slide_6_details"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat.Subhead"
                android:textColor="@android:color/white" />

        </LinearLayout>


    </LinearLayout>


</LinearLayout>