<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relativeMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appBarLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:theme="@style/AppTheme.AppBarOverlay">

        <include layout="@layout/toolbar" />

    </android.support.design.widget.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="10">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="9.1"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:background="@color/grey_bg">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true">


                    <ImageView
                        android:id="@+id/wallet"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:src="@drawable/wallet_icon"
                        android:tint="@color/textSub" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:layout_toEndOf="@+id/wallet"
                        android:layout_toRightOf="@+id/wallet"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Wallet Balance"
                            android:textAlignment="center"
                            android:textColor="@color/textSub"
                            android:textSize="15dp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/tvWalletMoney"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text=""
                            android:textColor="@color/colorPrimaryDark"
                            android:textSize="17dp"
                            android:textStyle="bold" />

                    </LinearLayout>

                </RelativeLayout>


            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                android:weightSum="10">

                <TextView
                    android:id="@+id/tv100"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2.4"
                    android:background="@drawable/rounded_corner_wallet"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/amount_100"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/tv200"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2.4"
                    android:background="@drawable/rounded_corner_wallet"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/amount_200"
                    android:textColor="@color/colorPrimary" />


                <TextView
                    android:id="@+id/tv500"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2.4"
                    android:background="@drawable/rounded_corner_wallet"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/amount_500"
                    android:textColor="@color/colorPrimary" />


                <TextView
                    android:id="@+id/tv1000"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:layout_weight="2.8"
                    android:background="@drawable/rounded_corner_wallet"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/amount_1000"
                    android:textColor="@color/colorPrimary" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#f3f5f6">

                <LinearLayout
                    android:id="@+id/linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_above="@+id/tvSignup"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="15dp"
                    android:orientation="horizontal"
                    android:weightSum="10">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="10dp"
                        android:layout_weight="1"
                        android:gravity="center_horizontal|center_vertical"
                        android:text="@string/Rs"
                        android:textColor="@color/grey_hard"
                        android:textSize="23dp" />

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/email1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="9"
                        android:textColor="@color/colorText"
                        android:textColorHint="@color/divider">

                        <EditText
                            android:id="@+id/etAmount"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="6dp"
                            android:backgroundTint="@color/colorPrimary"
                            android:gravity="left"
                            android:hint="Enter Amount"
                            android:inputType="number"
                            android:maxLength="4"
                            android:maxLines="1"
                            android:padding="10dp"
                            android:textColor="@color/divider"
                            android:textColorHint="@color/textSub"
                            android:textSize="14dp" />

                    </android.support.design.widget.TextInputLayout>


                </LinearLayout>
            </LinearLayout>


            <Button
                android:id="@+id/imgAddPayUbiz"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="50dp"
                android:background="@color/colorPrimary"
                android:text="ADD WALLET"
                android:textColor="@color/white"
                android:textSize="15dp"
                android:visibility="gone" />

            <TextView
                android:id="@+id/tvAddmoneyOption"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:gravity="center_horizontal"
                android:text="@string/add_money_from"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="#000000"
                android:visibility="gone" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tvAddmoneyOption"
                android:layout_marginTop="60dp"
                android:gravity="center"
                android:orientation="horizontal"
                tools:ignore="ObsoleteLayoutParam">

                <ImageView
                    android:id="@+id/imgAddPayUbizbtn"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_payunew"
                    android:visibility="gone" />

                <View
                    android:id="@+id/fragment_checkout_item_view1"
                    android:layout_width="10dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginLeft="8dp"
                    android:background="#4F4E4E"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvOr"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="3dp"
                    android:paddingLeft="5dp"
                    android:text="Or"
                    android:textAppearance="?android:attr/textAppearanceMedium"
                    android:textColor="#000000"
                    android:visibility="gone" />

                <View
                    android:id="@+id/fragment_checkout_item_view2"
                    android:layout_width="10dp"
                    android:layout_height="1dp"
                    android:layout_gravity="center"
                    android:layout_marginRight="8dp"
                    android:background="#4F4E4E"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/imgAddPaytm"
                    android:layout_width="130dp"
                    android:layout_height="50dp"
                    android:src="@drawable/ic_paytmnew" />


            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/botbar"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="bottom"
            android:layout_weight="0.9"
            android:background="#ffffff"
            android:visibility="gone">

            <Button
                android:id="@+id/btnContinueWallet"
                style="@style/Base.Widget.AppCompat.Button.Colored"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorPrimary"
                android:text="CONTINUE SHOPPING"
                android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                android:textColor="@color/cattextcolour"
                android:textSize="13dp" />

        </LinearLayout>
    </LinearLayout>
</LinearLayout>